--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
   </nav>
 
-  <aside class="product-order-detail">
+  <aside class="shopping-cart-container inactive">
     <div class="title-container">
       <img src="./icons/flechita.svg" alt="arrow">
       <p class="title">My order</p>
@@ -160,7 +160,7 @@
   </div>
   </aside>
 
-  <aside class="product-detail">
+  <aside class="product-detail inactive">
     <div class="product-detail-close">
       <img src="./icons/icon_close.png" alt="close">
     </div>
